src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Membership_Program__c</fullName>
        <description>Program status of Full Service Membership accounts</description>
        <inlineHelpText>Enter the current program status for full service membership accounts</inlineHelpText>
        <label>Membership Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Onboarding - Full Service Membership</fullName>
                </value>
                <value>
                    <fullName>Intro - MEP (C)</fullName>
                </value>
                <value>
                    <fullName>Intro - MEP (VE)</fullName>
                </value>
                <value>
                    <fullName>Member Engagement Program</fullName>
                </value>
                <value>
                    <fullName>MEP - Limited</fullName>
                </value>
                <value>
                    <fullName>Low Risk Get Well</fullName>
                </value>
                <value>
                    <fullName>High Risk Get Well</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metrostudy_Client_ID__c</fullName>
        <label>Metrostudy Client ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metrostudy_Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Metrostudy Market</label>
        <referenceTo>MetrostudyMarket__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Metrostudy_Sales_Region_Assignment_DBD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Region Assignment DBD</label>
        <referenceTo>MetrostudySalesRegionAssignment__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Metrostudy_Sales_Region_Assignment_RAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Region Assignment RAM</label>
        <referenceTo>MetrostudySalesRegionAssignment__c</referenceTo>
        <relationshipLabel>Accounts (Sales Region Assignment RAM)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Metrostudy_Sales_Region_Assignment_RD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Region Assignment RD</label>
        <referenceTo>MetrostudySalesRegionAssignment__c</referenceTo>
        <relationshipLabel>Accounts (Metrostudy Sales Region Assignment RD)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Migrated_to_MG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Migrated to MG Instance</description>
        <label>Migrated to MG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Longer_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Account is physically located at the address of record. It may be closed or it may have moved.</description>
        <inlineHelpText>Account is no longer at the location.</inlineHelpText>
        <label>No Longer Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Homes_Built_Annually__c</fullName>
        <label>Number of Homes Built Annually</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-10</fullName>
                </value>
                <value>
                    <fullName>11-50</fullName>
                </value>
                <value>
                    <fullName>51-100</fullName>
                </value>
                <value>
                    <fullName>101+</fullName>
                </value>
                <value>
                    <fullName>1-24</fullName>
                </value>
                <value>
                    <fullName>25-49</fullName>
                </value>
                <value>
                    <fullName>50-74</fullName>
                </value>
                <value>
                    <fullName>75-99</fullName>
                </value>
                <value>
                    <fullName>100-499</fullName>
                </value>
                <value>
                    <fullName>500-1,000</fullName>
                </value>
                <value>
                    <fullName>Over 1,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oldest_Invoice_Due_Date__c</fullName>
        <label>Oldest Invoice Due Date</label>
        <summarizedField>blng__Invoice__c.blng__DueDate__c</summarizedField>
        <summaryFilterItems>
            <field>blng__Invoice__c.blng__InvoiceStatus__c</field>
            <operation>equals</operation>
            <value>Posted</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>blng__Invoice__c.blng__PaymentStatus__c</field>
            <operation>notEqual</operation>
            <value>Paid</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>blng__Invoice__c.blng__Balance__c</field>
            <operation>greaterThan</operation>
            <value>10.00</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__Invoice__c.blng__Account__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count__c</fullName>
        <label>Opportunity Count</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Override_Billing_Address_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Billing Address Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Profile__c</fullName>
        <formula>Owner.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is used isn the Parent Account look up to restrict the lookup to Parent Accounts only</description>
        <inlineHelpText>This checkbox identifies this Account as a Parent Account</inlineHelpText>
        <label>Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Past_Due_Contact_Emails__c</fullName>
        <formula>Billing_Contact__r.Email+&apos;;&apos;+Emails_to_Receive_Invoices__c</formula>
        <label>Past Due Contact Emails</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_Due_Days__c</fullName>
        <formula>IF( Max_Days_Open__c &gt;=45 &amp;&amp; Max_Days_Open__c &lt;=59,45, 
   IF( Max_Days_Open__c &gt;=60 &amp;&amp; Max_Days_Open__c &lt;=74,60,
      IF( Max_Days_Open__c &gt;=75 &amp;&amp; Max_Days_Open__c &lt;=89,75,
         IF( Max_Days_Open__c &gt;=90 &amp;&amp; Max_Days_Open__c &lt;=104,90,
            IF( Max_Days_Open__c &gt;=105 &amp;&amp; Max_Days_Open__c &lt;=119,105,
              IF( Max_Days_Open__c &gt;=120 &amp;&amp; Max_Days_Open__c &lt;=134,120,
                 IF( Max_Days_Open__c &gt;=135 &amp;&amp; Max_Days_Open__c &lt;=149,135,
                   IF( Max_Days_Open__c &gt;=150 &amp;&amp; Max_Days_Open__c &lt;=164,150,
                      IF( Max_Days_Open__c &gt;=165 &amp;&amp; Max_Days_Open__c &lt;=179,165,
                         IF( Max_Days_Open__c &gt;=179,180,0 ))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past Due Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Past_Due_Invocies_Email_Notification__c</fullName>
        <description>##Conga created btn:00b3B000000IM7D</description>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;congaemailtemplateid=&quot; + CongaTemplateId__c +
&quot;&amp;emailrelatedtoid=&quot; + Id + 
&quot;&amp;reportid=00O2T000006p6ma&quot; + 
&quot;&amp;partnercode=0015000000Yd8nM&quot; + 
&quot;&amp;templategroup=invoice &quot; + 
&quot;&amp;emailfromid=0D22T000000k9fe&quot; + 
&quot;&amp;EmailAdditionalTo=&quot; + Past_Due_Contact_Emails__c +
&quot;&amp;EmailCC=&quot; + Account_Owner_Email__c +
&quot;&amp;emailbcc=zondaaccounting@meyersresearchllc.com&quot; + 
&quot;&amp;ds4=1&quot; + 
&quot;&amp;fp0=1&quot; + 
&quot;&amp;qmode=SendEmail&quot; + 
&quot;&amp;sc0=1&quot; + 
&quot;&amp;queryid=[Invoices]a3A2T000002AJpr?pv0=&quot; + Id</formula>
        <label>Past Due Invocies Email Notification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                    <default>true</default>
                    <label>Check</label>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Bank Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due on receipt</fullName>
                    <default>true</default>
                    <label>Due on receipt</label>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pool_Aquatics_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pool/Aquatics Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_RD__c</fullName>
        <label>Primary RD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Allen</fullName>
                </value>
                <value>
                    <fullName>Brault</fullName>
                </value>
                <value>
                    <fullName>Britsch</fullName>
                </value>
                <value>
                    <fullName>Brown</fullName>
                </value>
                <value>
                    <fullName>Burns</fullName>
                </value>
                <value>
                    <fullName>Christian</fullName>
                </value>
                <value>
                    <fullName>Cobb</fullName>
                </value>
                <value>
                    <fullName>Coltrin</fullName>
                </value>
                <value>
                    <fullName>Covert</fullName>
                </value>
                <value>
                    <fullName>Davis</fullName>
                </value>
                <value>
                    <fullName>Dean</fullName>
                </value>
                <value>
                    <fullName>Gooch</fullName>
                </value>
                <value>
                    <fullName>Hoff</fullName>
                </value>
                <value>
                    <fullName>Hoyle</fullName>
                </value>
                <value>
                    <fullName>Huecksteadt</fullName>
                </value>
                <value>
                    <fullName>Inselmann</fullName>
                </value>
                <value>
                    <fullName>James</fullName>
                </value>
                <value>
                    <fullName>Leach</fullName>
                </value>
                <value>
                    <fullName>Miley</fullName>
                </value>
                <value>
                    <fullName>Morrison</fullName>
                </value>
                <value>
                    <fullName>Mulville</fullName>
                </value>
                <value>
                    <fullName>O&apos;Grady</fullName>
                </value>
                <value>
                    <fullName>Plevak</fullName>
                </value>
                <value>
                    <fullName>Polito</fullName>
                </value>
                <value>
                    <fullName>Sage</fullName>
                </value>
                <value>
                    <fullName>Shipp</fullName>
                </value>
                <value>
                    <fullName>Stubblefield</fullName>
                </value>
                <value>
                    <fullName>Syhapanya</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_Account_Name_Value__c</fullName>
        <label>Prior Account Name Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prospect_Media__c</fullName>
        <description>Media products that prospective client might be interested in</description>
        <inlineHelpText>Media products that prospective client might be interested in</inlineHelpText>
        <label>Prospect - Media</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AHF Media</fullName>
                </value>
                <value>
                    <fullName>AHF Reader&apos;s Choice</fullName>
                </value>
                <value>
                    <fullName>AI 2016 Online Web</fullName>
                </value>
                <value>
                    <fullName>AI 2016 Print Logos</fullName>
                </value>
                <value>
                    <fullName>AI 2016 Product Sales</fullName>
                </value>
                <value>
                    <fullName>Aquatics International</fullName>
                </value>
                <value>
                    <fullName>At NAA</fullName>
                </value>
                <value>
                    <fullName>BD- Brand Leader</fullName>
                </value>
                <value>
                    <fullName>BD-Choice</fullName>
                </value>
                <value>
                    <fullName>BD Media</fullName>
                </value>
                <value>
                    <fullName>CH Media</fullName>
                </value>
                <value>
                    <fullName>Competitor 2016 - AL</fullName>
                </value>
                <value>
                    <fullName>Competitor 2016 - AR</fullName>
                </value>
                <value>
                    <fullName>Competitor 2016 - Builder</fullName>
                </value>
                <value>
                    <fullName>Competitor 2016 - CC</fullName>
                </value>
                <value>
                    <fullName>Competitor 2016 - Dealers</fullName>
                </value>
                <value>
                    <fullName>Competitor 2016 - Public Works</fullName>
                </value>
                <value>
                    <fullName>Competitor 2016 - Remodeling</fullName>
                </value>
                <value>
                    <fullName>Competitor 2016 - Remodeling +5</fullName>
                </value>
                <value>
                    <fullName>Eco Media</fullName>
                </value>
                <value>
                    <fullName>MFE Awards</fullName>
                </value>
                <value>
                    <fullName>MFE media</fullName>
                </value>
                <value>
                    <fullName>NMHC 50</fullName>
                </value>
                <value>
                    <fullName>Pool Spa News</fullName>
                </value>
                <value>
                    <fullName>PSN 2016 Online Web</fullName>
                </value>
                <value>
                    <fullName>PSN 2016 Print Logos</fullName>
                </value>
                <value>
                    <fullName>PSN 2016 Product Sales</fullName>
                </value>
                <value>
                    <fullName>Readers Choice (AHF)</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RDS_Email__c</fullName>
        <formula>$User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSD Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RD_Name_for_Dashboard_Filter__c</fullName>
        <label>RD Name for Dashboard Filter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RLT_Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RLT Executive Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSD_Fax__c</fullName>
        <formula>$User.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSD Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD_Phone__c</fullName>
        <formula>$User.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSD Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>10K Record Updated - Reset if another update is required. Access controlled via 10K Perm set</description>
        <inlineHelpText>10K Record Updated - Reset if another update is required. Access controlled via 10K Perm set</inlineHelpText>
        <label>Record Updated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_Name_2__c</fullName>
        <formula>Metrostudy_Sales_Region_Assignment_RD__r.SalesRegion__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Albuquerque</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Bay Area</fullName>
                </value>
                <value>
                    <fullName>BPM - East</fullName>
                </value>
                <value>
                    <fullName>BPM - Midwest</fullName>
                </value>
                <value>
                    <fullName>BPM - National</fullName>
                </value>
                <value>
                    <fullName>BPM - Northeast</fullName>
                </value>
                <value>
                    <fullName>BPM - Southeast</fullName>
                </value>
                <value>
                    <fullName>BPM - West</fullName>
                </value>
                <value>
                    <fullName>Central/Northern FL</fullName>
                </value>
                <value>
                    <fullName>Central CA</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>eCommerce</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>IL/WI/IN/MO/IA/KY/OH</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Maryland/Northern VA/DC</fullName>
                </value>
                <value>
                    <fullName>Midwest - Eastern</fullName>
                </value>
                <value>
                    <fullName>Midwest - Lower</fullName>
                </value>
                <value>
                    <fullName>Midwest - Upper</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Northern CA</fullName>
                </value>
                <value>
                    <fullName>NY/NJ/PA/DE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_Account__c</fullName>
        <formula>IF(!ISBLANK(ParentId), Parent.Name, Name)</formula>
        <label>Reporting Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Category__c</fullName>
        <label>Revenue Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FedEx</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SA_Account_Tier__c</fullName>
        <label>Strategic Account Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AssetQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</description>
        <inlineHelpText>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</inlineHelpText>
        <label>Combine Asset Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTermedContractsCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that controls whether assets and subscriptions from multiple co-teremed contracts are rolled up together. By default, each co-termed contract generates a separate group on renewal quote.</description>
        <inlineHelpText>Enable to combine assets and subscriptions from multiple co-termed contracts. By default, each co-termed contract generates a separate group on renewal quote.</inlineHelpText>
        <label>Combine Co-Termed Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTerminationEvent__c</fullName>
        <description>Determines when contracts are co-terminated.</description>
        <inlineHelpText>Determines when contracts are co-terminated.</inlineHelpText>
        <label>Co-Termination Event</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ContractCoTermination__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Add-on</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ContractCoTermination__c</fullName>
        <description>Determines how service and subscription contracts for this customer are co-terminated.</description>
        <inlineHelpText>Determines how service and subscription contracts for this customer are co-terminated.</inlineHelpText>
        <label>Contract Co-Termination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                    <default>true</default>
                    <label>Never</label>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Prompt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</description>
        <inlineHelpText>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</inlineHelpText>
        <label>Default Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>WebAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__IgnoreParentContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if contracted prices should not be inherited from the parent account.</description>
        <inlineHelpText>Select if contracted prices should not be inherited from the parent account.</inlineHelpText>
        <label>Ignore Parent Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes and amendments</description>
        <inlineHelpText>Select checkbox to maintain bundle hierarchy on renewal quotes and amendments.</inlineHelpText>
        <label>Preserve Bundle Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceHoldEnd__c</fullName>
        <description>End date for any price hold that may be in effect.</description>
        <inlineHelpText>Enter date until which the prices must be held.</inlineHelpText>
        <label>Price Hold End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalModel__c</fullName>
        <description>The option to distinguish between Subscription or Asset based renewal.</description>
        <inlineHelpText>Choose Asset Based to make renewals based off of an account&apos;s Assets or choose Subscription based to makes renewals based off of subscriptions created from a quote.</inlineHelpText>
        <label>Renewal Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Based</fullName>
                </value>
                <value>
                    <fullName>Contract Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricingMethod__c</fullName>
        <description>Method for pricing products on renewal.</description>
        <inlineHelpText>Use &quot;Same&quot; to keep the same price paid last time. Use &quot;List&quot; to use current list price. Use &quot;Uplift&quot; to use the price paid last time plus some uplift.</inlineHelpText>
        <label>Renewal Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same</fullName>
                    <default>true</default>
                    <label>Same</label>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Uplift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TaxExempt__c</fullName>
        <description>Selected if this account has active certificates</description>
        <inlineHelpText>Selected if this account has active certificates</inlineHelpText>
        <label>Tax-Exempt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Region_Assignment_DBD__c</fullName>
        <formula>IF( 
AND(Metrostudy_Sales_Region_Assignment_DBD__c &lt;&gt;NULL, Metrostudy_Sales_Region_Assignment_DBD__r.User__c &lt;&gt; NULL), Metrostudy_Sales_Region_Assignment_DBD__r.User__r.FirstName &amp;&quot; &quot;&amp; Metrostudy_Sales_Region_Assignment_DBD__r.User__r.LastName, 

IF 
(AND(Metrostudy_Sales_Region_Assignment_DBD__c &lt;&gt;NULL, Metrostudy_Sales_Region_Assignment_DBD__r.User__c =NULL), &quot;Not Assigned&quot;, 

IF( Strategic_Account_DBD_Override__c &lt;&gt;NULL, 
Strategic_Account_DBD_Override__r.FirstName &amp;&quot; &quot;&amp; 
Strategic_Account_DBD_Override__r.LastName, 
&quot;Not Assigned&quot; 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Region Assignment DBD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Region_Assignment_RAM__c</fullName>
        <formula>IF( 
AND(Metrostudy_Sales_Region_Assignment_RAM__c &lt;&gt;NULL, Metrostudy_Sales_Region_Assignment_RAM__r.User__c &lt;&gt; NULL), Metrostudy_Sales_Region_Assignment_RAM__r.User__r.FirstName &amp;&quot; &quot;&amp; Metrostudy_Sales_Region_Assignment_RAM__r.User__r.LastName,  

IF 
(AND(Metrostudy_Sales_Region_Assignment_RAM__c &lt;&gt;NULL, Metrostudy_Sales_Region_Assignment_RAM__r.User__c =NULL), &quot;Not Assigned&quot;, 

IF( Strategic_Account_RD_Override__c &lt;&gt;NULL, 
Strategic_Account_RD_Override__r.FirstName &amp;&quot; &quot;&amp; 
Strategic_Account_RD_Override__r.LastName, 
&quot;Not Assigned&quot; 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Region Assignment RAM</label>
        <type>Text</type>
    </fields>
</CustomObject>